@@ -1,3 +1,4 @@
+* Allow to delete staging move
 * Allow to deactivate only empty locations
 
 Version 4.4.0 - 2017-05-01
